--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
    <title>Zeeje</title>
 </head>
 <body>
+
+  <!---------------------------------------PreLoader--------------------------------------------------->
+  <div id="loader">
+    <div class="indicator"> 
+      <div class="loader loader--style8" title="7">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           width="24px" height="30px" viewBox="0 0 24 30" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+          <rect x="0" y="10" width="4" height="10" fill="#333" opacity="0.2">
+            <animate attributeName="opacity" attributeType="XML" values="0.2; 1; .2" begin="0s" dur="0.6s" repeatCount="indefinite" />
+            <animate attributeName="height" attributeType="XML" values="10; 20; 10" begin="0s" dur="0.6s" repeatCount="indefinite" />
+            <animate attributeName="y" attributeType="XML" values="10; 5; 10" begin="0s" dur="0.6s" repeatCount="indefinite" />
+          </rect>
+
+          <rect x="8" y="10" width="4" height="10" fill="#333"  opacity="0.2">
+            <animate attributeName="opacity" attributeType="XML" values="0.2; 1; .2" begin="0.15s" dur="0.6s" repeatCount="indefinite" />
+            <animate attributeName="height" attributeType="XML" values="10; 20; 10" begin="0.15s" dur="0.6s" repeatCount="indefinite" />
+            <animate attributeName="y" attributeType="XML" values="10; 5; 10" begin="0.15s" dur="0.6s" repeatCount="indefinite" />
+          </rect>
+
+          <rect x="16" y="10" width="4" height="10" fill="#333"  opacity="0.2">
+            <animate attributeName="opacity" attributeType="XML" values="0.2; 1; .2" begin="0.3s" dur="0.6s" repeatCount="indefinite" />
+            <animate attributeName="height" attributeType="XML" values="10; 20; 10" begin="0.3s" dur="0.6s" repeatCount="indefinite" />
+            <animate attributeName="y" attributeType="XML" values="10; 5; 10" begin="0.3s" dur="0.6s" repeatCount="indefinite" />
+          </rect>
+        </svg>
+      </div>
+    </div>
+  </div>
+
+
   <a id="cart" href="#"><i class="fa fa-shopping-cart"></i></a>
   <div class="login-menu"><a href="#" class="login login1 text-center">Login</a><a href="#" class="login text-center">Sign Up</a></div>
 
@@ -192,6 +222,15 @@
   </div>
   <hr><p class="text-center">Copyright <i class="far fa-copyright"></i> 2020, <span>Zeeje</span></p>
 </footer>
+
+<script type="text/javascript">
+  var overlay = document.getElementById("loader");
+
+  window.addEventListener('load', function(){
+    overlay.style.display = 'none';
+  })
+
+</script>
 
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
