--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
                 </ul>
 
                 <li>
-                  <a href="faqs.html" class="nav-link">
+                  <a href="pages/faqs.html" class="nav-link">
                   <i class="fa fa-question fa-lg"></i> FAQs
                   </a>
                 </li>
 
                  <li>
-                  <a href="about_us.html" class="nav-link">
+                  <a href="pages/about_us.html" class="nav-link">
                   <i class="fa fa-user fa-lg"></i> About Us
                   </a>
                   </li>
 
                   <li>
-                  <a href="contact_us.html" class="nav-link">
+                  <a href="pages/contact_us.html" class="nav-link">
                   <i class="fa fa-envelope fa-lg"></i> Contact Us
                   </a>
                   </li>
 
                  <li>
-                  <a href="privacy_policy.html" class="nav-link">
+                  <a href="pages/privacy_policy.html" class="nav-link">
                   <i class="fa fa-user-shield fa-lg"></i> Privacy Policy
                   </a>
                 </li>
 
                 <li>
-                  <a href="sarpolicy.html" class="nav-link">
+                  <a href="pages/sarpolicy.html" class="nav-link">
                   <i class="fa fa-shipping-fast fa-lg"></i> Shipping and Return Policy
                   </a>
                 </li>
